<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".HomeActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:onClick="logoutClicked"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomServiceMenuBtn" />

        <TextView
            android:id="@+id/welcomeLbl"
            style="@style/textStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/searchRoomsBtn"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="68dp"
            android:onClick="searchRoomsClicked"
            android:text="@string/homeSearchRooms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLbl" />

        <Button
            android:id="@+id/reservedRoomsBtn"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="68dp"
            android:onClick="reservedRoomsClicked"
            android:text="@string/homeMyReservedRooms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchRoomsBtn" />

        <Button
            android:id="@+id/roomServiceBtn"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="68dp"
            android:onClick="roomServiceClicked"
            android:text="@string/homeMyRoomService"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reservedRoomsBtn" />

        <Button
            android:id="@+id/roomServiceMenuBtn"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="68dp"
            android:onClick="roomServiceMenuClicked"
            android:text="@string/homeRoomServiceMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomServiceBtn" />

        <TextView
            android:id="@+id/nameLbl"
            style="@style/textStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="27.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLbl" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>