<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReserveActivity">

    <TextView
        android:id="@+id/startDateLbl"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDate"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/startDateBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startDateLbl"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/startDate"
        android:onClick="startDateClicked"
        />

    <TextView
        android:id="@+id/endDateLbl"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/startDateBtn"
        android:text="@string/endDate" />

    <Button
        android:id="@+id/endDateBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/endDateLbl"
        android:inputType="date"
        android:text="@string/endDate"
        android:onClick="endDateClicked"
        />

    <Button
        android:id="@+id/checkBtn"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/endDateBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/checkAvailability"
        android:onClick="check"/>

    <TextView
        android:id="@+id/availableLbl"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:visibility="invisible"
        android:text="@string/roomStatusAvailable" />

    <TextView
        android:id="@+id/startWeatherLbl"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherStartDate"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/availableLbl"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/startWeatherValueLbl"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startWeatherLbl"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/startWeatherImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/startWeatherLbl"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/endWeatherLbl"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherEndDate"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_below="@id/startWeatherValueLbl"/>

    <TextView
        android:id="@+id/endWeatherValueLbl"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_below="@id/endWeatherLbl"
        />

    <ImageView
        android:id="@+id/endWeatherImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/endWeatherLbl"
        android:visibility="invisible"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>