<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="182dp"
            android:layout_height="158dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="98dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            app:tint="@color/color_2" />

        <TextView
            android:id="@+id/titleLbl"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="16dp"
            android:text="@string/logo"
            android:textAlignment="center"
            android:textColor="@color/color_2"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImg" />

        <TextView
            android:id="@+id/signUpLabel"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="137dp"
            android:text="@string/noAccount"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLbl" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/btnStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:onClick="goToSignUp"
            android:text="@string/signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpLabel" />

        <TextView
            android:id="@+id/loginLabel"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="89dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="89dp"
            android:text="@string/hasAccount"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <Button
            android:id="@+id/signUpBtn"
            style="@style/btnStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:onClick="goToLogin"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>