<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RoomActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/roomTypeLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/roomTypePlaceholder"
                    android:textColor="@color/color_2"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/roomStatusLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingEnd="16dp"
                    android:text="@string/roomStatusBooked"
                    android:textColor="@color/color_2"
                    android:textSize="16sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/numberFloorLbl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:text="@string/roomNumberPlaceholder"
                android:textColor="@color/color_2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/roomDescLbl"
                style="@style/textStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginEnd="16dp"
                android:text="@string/roomDescriptionPlaceholder"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

            <ImageView
                android:id="@+id/imageView1"
                style="@style/roomImagePreviewStyle"/>

            <ImageView
                android:id="@+id/imageView2"
                style="@style/roomImagePreviewStyle"/>

            <ImageView
                android:id="@+id/imageView3"
                style="@style/roomImagePreviewStyle"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>